Fix the border on the red button on safari
Helpful article:
- https://medium.com/@jeandesravines/use-border-radius-and-outline-simultaneously-on-safari-14ce92889e1f

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -144,11 +144,16 @@
         color: white;
       }
 
-      @include mixins.tablet {
-        &:hover {
-          outline: 3px solid white;
-          outline-offset: -7px;
-        }
+      &:focus::before,
+        &:hover::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          border: 3px solid white;
+          border-radius: inherit;
       }
     }
 
